fixed links to point to subdomain

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div id="wrapper">
-        <p id="home"><a href="/code/webdev">/home</a> ⇠ return home</p>
+        <p id="home"><a href="/">/home</a> ⇠ return home</p>
     {{{body}}}
     </div>
 </body>
