--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -2,15 +2,15 @@
 <p>~ javascript oriented projects that are just gaining their wings ~</p>
 <br />
 
-<p><a href="/code/webdev/weather" class="name">/weather</a> ⇢ weather getter</p>
-<p><a href="/code/webdev/todo" class="name">/todo</a> ⇢ people say nothing is impossible, but I do nothing every day.</p>
-<p><a href="/code/webdev/count" class="name">/count</a> ⇢ session like it's going out of style!</p>
+<p><a href="/weather" class="name">/weather</a> ⇢ weather getter</p>
+<p><a href="/todo" class="name">/todo</a> ⇢ people say nothing is impossible, but I do nothing every day.</p>
+<p><a href="/count" class="name">/count</a> ⇢ session like it's going out of style!</p>
 
-<p><a href="/code/webdev/getpost" class="name">/getpost</a> ⇢ GET and POST requests</p>
-<p><a href="/code/webdev/form" class="name">/form</a> ⇢ handy forms for submitting GETs and POSTs</p>
-<p><a href="/code/webdev/random" class="name">/random</a> ⇢ random number</p>
-<p><a href="/code/webdev/time" class="name">/time</a> ⇢  current time</p>
-<p><a href="/code/webdev/scroll" class="name">/scroll</a> ⇢  ever want to read moby dick in one line? you're in luck!</p>
+<p><a href="/getpost" class="name">/getpost</a> ⇢ GET and POST requests</p>
+<p><a href="/form" class="name">/form</a> ⇢ handy forms for submitting GETs and POSTs</p>
+<p><a href="/random" class="name">/random</a> ⇢ random number</p>
+<p><a href="/time" class="name">/time</a> ⇢  current time</p>
+<p><a href="/scroll" class="name">/scroll</a> ⇢  ever want to read moby dick in one line? you're in luck!</p>
 
 <div id="footer">
 <footer>
