--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,10 +4,19 @@
     <title>GET/POST</title>
     <link rel="stylesheet" href="/css/main.css">
     <link rel="stylesheet" href="/css/form.css">
+    <link id="dark" rel="stylesheet" href="">
+    <script type="text/javascript" src="/theme.js" async></script>
     <meta charset="utf-8">
 </head>
 <body>
     <div id="wrapper">
+    <div class="style">
+        <span class="dot">·</span>
+        <button id="lightswitch" class="light" type="button">·</button>
+        <span class="dot">·</span>
+        <button id="darkswitch" class="dark" type="button">·</button>
+        <span class="dot">·</span>
+    </div>
         <p id="home"><a href="/">/home</a> ⇠ return home</p>
     {{{body}}}
     </div>
