--- a/views/weather.handlebars
+++ b/views/weather.handlebars
@@ -9,6 +9,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/weather.css">
      <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ==" crossorigin=""/>
+    <link id="dark" rel="stylesheet" href="">
 
   </head>
   <body>
